--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.19.2",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "joi": "^17.13.1"
   }
 }
