--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "nodemon  --exec ts-node src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migrate": "ts-node ./src/seed/seedDatabase.ts"
   },
   "keywords": [],
   "author": "",
@@ -19,9 +20,10 @@
   },
   "dependencies": {
     "express": "^4.19.2",
+    "faker": "^6.6.6",
+    "joi": "^17.13.1",
     "mysql": "^2.18.1",
     "reflect-metadata": "^0.2.2",
-    "typeorm": "^0.3.20",
-    "joi": "^17.13.1"
+    "typeorm": "^0.3.20"
   }
 }
